<resources>
    <string name="app_name">SQLiteDatabaseApp</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="add_data">Add Data</string>
    <string name="view_all">View All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="id">id</string>
    <string name="first_name">First Name</string>
</resources>
